# jitTutorial

./: .gitignore  README.md  model.cpp  model.hpp  model.py
freeze_cpp/: CMakeLists.txt  Model-BF.cpp  Model.cpp  Model.hpp
python_cpp/: model.cpp  model.py
read_scala/: build.sbt
read_scala/lib/: libModel.dylib
read_scala/src/main/scala/: EvalJNI.scala  Model.scala  ModelJNI.cpp  ModelJNI.h  ModelJNI.scala  libModel.dylib
request_python/: run.py  utils.py
request_python/app/: route.py
request_python/app/templates/: build_form.html  index.html
serve_scala/: build.sbt
serve_scala/src/main/resources/: application.conf  restart-server.sh  run-server.config  run-server.sh
serve_scala/src/main/scala/: CalculateRequest.scala  EvalJNI.scala  HandleRequest.scala  ManageRequest.scala  RunServer.scala
trace_benchmark_DNN/: benchmark.py
trace_trained_RNN/: config.py  preprocess.py  test.py  trace.py  train.py  util.py
train_python/: benchmark_model.py  config.py  main.py  model.py  preprocess.py  test.py  trace.py  trace_model.py  train.py  util.py
write_python/: CMakeLists.txt  EvalJNI.h  Model.cpp  Model.hpp  model.cpp  model.hpp
